# gh-folder-download

./: .gitignore  LICENSE  Makefile  README.md  contributing.md  gh-folder-download.sample.yaml  makefile  pyproject.toml  readme.md  ruff.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  tests.yml
gh_folder_download/: __main__.py  cache.py  config.py  core.py  filters.py  integrity.py  logger.py  main.py  parallel_downloader.py  progress.py  rate_limiter.py  retry.py  validation.py
tests/: conftest.py  test_cache.py  test_config.py  test_filters.py  test_integration.py  test_integrity.py  test_rate_limiter.py  test_retry.py  test_validation.py
