[project]
name = "gh-folder-download"
version = "1.0.0"
description = "A command line application (CLI) to download only a specific folder without downloading the full repository implemented with Python using Typer and GitHub API."
authors = [
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
maintainers = [
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
readme = "readme.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["github", "download", "folder", "cli"]

requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.12.6",
    "pydantic>=2.11.5",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.11.12"]

[project.urls]
homepage = "https://github.com/leynier/gh-folder-download"
repository = "https://github.com/leynier/gh-folder-download"
documentation = "https://github.com/leynier/gh-folder-download"
issues = "https://github.com/leynier/gh-folder-download/issues"

[project.scripts]
gh-folder-download = "gh_folder_download.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
