[project]
name = "gh-folder-download"
version = "1.0.1"
description = "A command line application (CLI) to download only a specific folder without downloading the full repository implemented with Python using Typer and GitHub API."
authors = [
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
maintainers = [
    { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
readme = "readme.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["github", "download", "folder", "cli"]

requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.13.2",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.14.10", "ty>=0.0.7"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = ["tests"]

[project.urls]
homepage = "https://github.com/leynier/gh-folder-download"
repository = "https://github.com/leynier/gh-folder-download"
documentation = "https://github.com/leynier/gh-folder-download"
issues = "https://github.com/leynier/gh-folder-download/issues"

[project.scripts]
gh-folder-download = "gh_folder_download.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
